fix:閉じタグ追加

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   
     <section id="contact" class="p-4 mb-8 bg-black rounded bg-opacity-60">
       <h2 class="text-2xl font-bold">連絡先</h2>
-      <p>Email: aokidai0127@gmail.com
+      <p>Email: aokidai0127@gmail.com</p>
     </section>
   </main>
 
