新たにプロジェクトを追記

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
       <p>
         <strong>@nifty新生活質問サイト</strong> - 若者向けに生活に関する質問を投稿し、専門家やユーザーからの回答を得られるサイトの構築に携わりました。<br>
         <strong>ToDoアプリ</strong> - タスクの進捗を視覚化する円グラフや、残り時間に応じた絵文字の変化機能を実装し、ユニークなユーザー体験を提供しました。<br>
-        <strong>研究室プロジェクトでの開発</strong> - 東北工業大学アクセスマップにバスの次発時刻表示機能を追加しました。
+        <strong>ポートフォリオサイト</strong> - このサイトです。デザインからコーディングまで一貫して担当しました。<br>
+        <strong>研究室プロジェクトでの開発</strong> - 東北工業大学アクセスマップにバスの次発時刻表示機能を追加しました。<br>
+        <strong>サークルなう</strong> - サークルの入室管理アプリ。ボタンを押して簡単入室処理、誰がいま部室にいるか分かる、いまいくボタンでサークルに積極参加できる。<br>
       </p>
     </section>
   
