スペースを多めに取ったUIに変更

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 </head>
 <body class="flex flex-col min-h-screen text-white bg-gray-900">
   <div id="p5-canvas"></div>
-  <header class="relative z-10 p-4 text-center bg-gray-800 bg-opacity-80">
+  <header class="relative z-10 p-8 text-center bg-gray-800 bg-opacity-80">
     <nav>
-      <ul class="flex justify-center space-x-4">
+      <ul class="flex justify-center space-x-8">
         <li><a href="#about" class="text-white">自己紹介</a></li>
         <li><a href="#skills" class="text-white">スキル</a></li>
         <li><a href="#projects" class="text-white">プロジェクト</a></li>
@@ -30,14 +30,14 @@
       </ul>
     </nav>
   </header>
-  <main class="relative z-10 flex-1 p-8 text-white">
-    <section id="about" class="p-4 mb-8 bg-black rounded bg-opacity-60">
-      <h1 class="text-3xl font-bold">自己紹介</h1>
+  <main class="relative z-10 flex-1 p-16 text-white">
+    <section id="about" class="p-8 mb-16 bg-black rounded bg-opacity-60">
+      <h1 class="mb-4 text-4xl font-bold">自己紹介</h1>
       <p>青木大です。Webアプリケーション開発を中心に、バックエンドとフロントエンドの両方を経験し、フルスタックエンジニアを目指しています。LaravelやJavaScriptを用いた開発に強みがあり、チーム開発やプロジェクト管理の経験を活かして、ユーザー視点に立ったサービスの提供を心がけています。常に新しい技術を学び、挑戦を続けることを大切にしています。</p>
     </section>
   
-    <section id="skills" class="p-4 mb-8 bg-black rounded bg-opacity-60">
-      <h2 class="text-2xl font-bold">スキル</h2>
+    <section id="skills" class="p-8 mb-16 bg-black rounded bg-opacity-60">
+      <h2 class="mb-4 text-3xl font-bold">スキル</h2>
       <p>
         <strong>プログラミング言語:</strong> HTML, CSS, JavaScript, PHP, Java<br>
         <strong>フレームワーク:</strong> Laravel, Ruby on Rails<br>
@@ -45,24 +45,24 @@
       </p>
     </section>
   
-    <section id="projects" class="p-4 mb-8 bg-black rounded bg-opacity-60">
-      <h2 class="text-2xl font-bold">プロジェクト</h2>
+    <section id="projects" class="p-8 mb-16 bg-black rounded bg-opacity-60">
+      <h2 class="mb-4 text-3xl font-bold">プロジェクト</h2>
       <p>
         <strong>@nifty新生活質問サイト</strong> - 若者向けに生活に関する質問を投稿し、専門家やユーザーからの回答を得られるサイトの構築に携わりました。<br>
         <strong>ToDoアプリ</strong> - タスクの進捗を視覚化する円グラフや、残り時間に応じた絵文字の変化機能を実装し、ユニークなユーザー体験を提供しました。<br>
         <strong>ポートフォリオサイト</strong> - このサイトです。デザインからコーディングまで一貫して担当しました。<br>
         <strong>研究室プロジェクトでの開発</strong> - 東北工業大学アクセスマップにバスの次発時刻表示機能を追加しました。<br>
-        <strong>サークルなう</strong> - サークルの入室管理アプリ。ボタンを押して簡単入室処理、誰がいま部室にいるか分かる、いまいくボタンでサークルに積極参加できる。<br>
+        <strong>サークルなう</strong> - サークルの入室管理アプリ。ボタンを押して簡単入室処理、誰がいま部室にいるか分かる、いまいくボタンでサークルに積極参加できるという特徴があります。<br>
       </p>
     </section>
   
-    <section id="contact" class="p-4 mb-8 bg-black rounded bg-opacity-60">
-      <h2 class="text-2xl font-bold">連絡先</h2>
+    <section id="contact" class="p-8 mb-16 bg-black rounded bg-opacity-60">
+      <h2 class="mb-4 text-3xl font-bold">連絡先</h2>
       <p>Email: aokidai0127@gmail.com</p>
     </section>
   </main>
 
-  <footer class="relative z-10 p-4 text-center bg-gray-800 bg-opacity-80">
+  <footer class="relative z-10 p-8 text-center bg-gray-800 bg-opacity-80">
     <p>&copy; 2024 Dai Aoki</p>
   </footer>
 </body>
